instead BackgroundMediaPlayer with MeidiaPlayer

--- a/AilianBT/Views/MusicView.xaml
+++ b/AilianBT/Views/MusicView.xaml
@@ -3,7 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:AilianBT.Views"
-    xmlns:models="using:AilianBTShared.Models"
+    xmlns:models="using:AilianBT.Models"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
@@ -89,23 +89,30 @@
         <ListView Grid.ColumnSpan="3" Grid.Row="0" x:Name="list_music" 
                   ItemsSource="{x:Bind MusicVM.MusicList,Mode=OneWay}"
                   IsItemClickEnabled="True" SelectionMode="Single" 
-                  ItemClick="{x:Bind MusicVM.ItemClick}"
+                  SelectedIndex="{x:Bind MusicVM.CurrentIndex,Mode=TwoWay}"
                   Background="{ThemeResource AilianBtGridBackground2}">
             <ListView.ItemTemplate>
                 <DataTemplate x:DataType="models:MusicModel">
-                    <Grid>
+                    <Grid Background="Transparent" IsDoubleTapEnabled="True" DoubleTapped="Grid_DoubleTapped" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="40"/>
                             <ColumnDefinition/>
                         </Grid.ColumnDefinitions>
-                        <TextBlock Grid.Column="0" HorizontalAlignment="Right" Text="{x:Bind ID,Mode=OneWay}" Margin="4,0,4,0"></TextBlock>
-                        <TextBlock Grid.Column="1" Text="{x:Bind Title,Mode=OneWay}" TextWrapping="Wrap" Margin="4,0,4,0"></TextBlock>
+                        <TextBlock VerticalAlignment="Center" Grid.Column="0" HorizontalAlignment="Right" Text="{x:Bind ID,Mode=OneWay}" Margin="4,0,4,0"></TextBlock>
+                        <TextBlock VerticalAlignment="Center" Grid.Column="1" Text="{x:Bind Title,Mode=OneWay}" TextWrapping="Wrap" Margin="4,0,4,0"></TextBlock>
                     </Grid>
                 </DataTemplate>
             </ListView.ItemTemplate>
             <ListView.ItemContainerStyle>
                 <Style TargetType="ListViewItem">
-                    <Setter Property="VerticalContentAlignment" Value="Center"></Setter>
+                    <Setter Property="Height" Value="50"></Setter>
+                    <Setter Property="Margin" Value="0"></Setter>
+                    <Setter Property="Padding" Value="0"></Setter>
+                    <Setter Property="MinHeight" Value="0"></Setter>
+                    <Setter Property="HorizontalAlignment" Value="Stretch"/>
+                    <Setter Property="VerticalAlignment" Value="Stretch"/>
+                    <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
+                    <Setter Property="VerticalContentAlignment" Value="Stretch"></Setter>
                 </Style>
             </ListView.ItemContainerStyle>
         </ListView>
