--- a/AilianBT/Views/MusicView.xaml
+++ b/AilianBT/Views/MusicView.xaml
@@ -3,7 +3,8 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:AilianBT.Views"
-    xmlns:models="using:AilianBT.Models"
+    xmlns:models="using:AilianBT.Common.Models"
+    xmlns:helpers="using:AilianBT.Common.Helpers"
     xmlns:converters="using:AilianBT.ValueConverters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
