--- a/AilianBT/Themes/Generic.xaml
+++ b/AilianBT/Themes/Generic.xaml
@@ -2,9 +2,8 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:AilianBT"
-    xmlns:controls="using:AilianBT.Controls">
+    xmlns:controls="using:AilianBT.Views.Controls">
 
     <Style TargetType="controls:KeyPannelControl" >
-        
     </Style>
 </ResourceDictionary>
