--- a/AilianBT/Views/SearchView.xaml
+++ b/AilianBT/Views/SearchView.xaml
@@ -3,7 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:AilianBT.Views"
-    xmlns:controls="using:AilianBT.Controls"
+    xmlns:controls="using:AilianBT.Views.Controls"
     xmlns:models="using:AilianBT.Models"
     xmlns:converters="using:AilianBT.ValueConverters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
