--- a/AilianBT/Views/Controls/SearchBox.xaml
+++ b/AilianBT/Views/Controls/SearchBox.xaml
@@ -1,72 +1,91 @@
-﻿<UserControl
-    x:Class="AilianBT.Views.Controls.SearchBox"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:AilianBT.Views.Controls"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d"
-    Height="32" >
+﻿<UserControl x:Class="AilianBT.Views.Controls.SearchBox"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:local="using:AilianBT.Views.Controls"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             Height="32"
+             mc:Ignorable="d">
     <UserControl.Resources>
         <Style x:Key="SearchButton" TargetType="Button">
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate>
-                        <Grid x:Name="RootGrid" Background="Transparent" Width="32">
+                        <Grid x:Name="RootGrid"
+                              Width="32"
+                              Background="Transparent">
+                            <Rectangle x:Name="rectBackground" Fill="Transparent" />
+                            <TextBlock x:Name="iconSearch"
+                                       HorizontalAlignment="Center"
+                                       VerticalAlignment="Center"
+                                       FontFamily="Segoe MDL2 Assets"
+                                       Foreground="{StaticResource AilianBtMainColor}"
+                                       RenderTransformOrigin="0.5,0.5"
+                                       Text="&#xE71E;">
+                                <TextBlock.RenderTransform>
+                                    <ScaleTransform x:Name="scaleTrans" ScaleX="1" ScaleY="1" />
+                                </TextBlock.RenderTransform>
+                            </TextBlock>
                             <VisualStateManager.VisualStateGroups>
                                 <VisualStateGroup>
-                                    <VisualState x:Name="Normal"></VisualState>
+                                    <VisualState x:Name="Normal" />
                                     <VisualState x:Name="PointerOver">
                                         <Storyboard>
-                                            <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Fill" Storyboard.TargetName="rectBackground">
-                                                <DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource AilianBtMainColor}"/>
+                                            <ObjectAnimationUsingKeyFrames Storyboard.TargetName="rectBackground" Storyboard.TargetProperty="Fill">
+                                                <DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource AilianBtMainColor}" />
                                             </ObjectAnimationUsingKeyFrames>
-                                            <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Foreground" Storyboard.TargetName="iconSearch">
-                                                <DiscreteObjectKeyFrame KeyTime="0" Value="#ffffff"/>
+                                            <ObjectAnimationUsingKeyFrames Storyboard.TargetName="iconSearch" Storyboard.TargetProperty="Foreground">
+                                                <DiscreteObjectKeyFrame KeyTime="0" Value="#ffffff" />
                                             </ObjectAnimationUsingKeyFrames>
                                         </Storyboard>
                                     </VisualState>
                                     <VisualState x:Name="Pressed">
                                         <Storyboard>
-                                            <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Fill" Storyboard.TargetName="rectBackground">
-                                                <DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource AilianBtMainColor}"/>
+                                            <ObjectAnimationUsingKeyFrames Storyboard.TargetName="rectBackground" Storyboard.TargetProperty="Fill">
+                                                <DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource AilianBtMainColor}" />
                                             </ObjectAnimationUsingKeyFrames>
-                                            <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Foreground" Storyboard.TargetName="iconSearch">
-                                                <DiscreteObjectKeyFrame KeyTime="0" Value="#ffffff"/>
+                                            <ObjectAnimationUsingKeyFrames Storyboard.TargetName="iconSearch" Storyboard.TargetProperty="Foreground">
+                                                <DiscreteObjectKeyFrame KeyTime="0" Value="#ffffff" />
                                             </ObjectAnimationUsingKeyFrames>
                                         </Storyboard>
                                         <VisualState.Setters>
-                                            <Setter Target="scaleTrans.ScaleX" Value="0.8"></Setter>
-                                            <Setter Target="scaleTrans.ScaleY" Value="0.8"></Setter>
+                                            <Setter Target="scaleTrans.ScaleX" Value="0.8" />
+                                            <Setter Target="scaleTrans.ScaleY" Value="0.8" />
                                         </VisualState.Setters>
                                     </VisualState>
                                 </VisualStateGroup>
                             </VisualStateManager.VisualStateGroups>
-                            <Rectangle x:Name="rectBackground" Fill="Transparent"></Rectangle>
-                            <TextBlock x:Name="iconSearch" HorizontalAlignment="Center" Foreground="{StaticResource AilianBtMainColor}" VerticalAlignment="Center"  FontFamily="Segoe MDL2 Assets" Text="&#xE71E;"
-                                       RenderTransformOrigin="0.5,0.5">
-                                <TextBlock.RenderTransform>
-                                    <ScaleTransform x:Name="scaleTrans" ScaleX="1" ScaleY="1"></ScaleTransform>
-                                </TextBlock.RenderTransform>
-                            </TextBlock>
                         </Grid>
                     </ControlTemplate>
                 </Setter.Value>
             </Setter>
         </Style>
-        
+
     </UserControl.Resources>
 
-    <Grid  HorizontalAlignment="Stretch" BorderThickness="1" BorderBrush="{StaticResource AilianBtMainColor}">
+    <Grid HorizontalAlignment="Stretch"
+          BorderBrush="{StaticResource AilianBtMainColor}"
+          BorderThickness="1">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition/>
-            <ColumnDefinition Width="auto"/>
+            <ColumnDefinition />
+            <ColumnDefinition Width="auto" />
         </Grid.ColumnDefinitions>
-        <TextBox Padding="8,4,8,4" VerticalContentAlignment="Center" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" BorderBrush="{StaticResource AilianBtMainColor }"
-                 x:Name="tbSearch" MinWidth="300"  Text="{x:Bind SearchKey,Mode=OneWay}"
-                 PlaceholderText="请输入关键字" BorderThickness="0"/>
-        <Button  Style="{StaticResource SearchButton}" Background="Transparent" HorizontalAlignment="Center" Grid.Column="1" BorderThickness="0" x:Name="btnSearch"  VerticalAlignment="Stretch">
-            
-        </Button>
+        <TextBox x:Name="tbSearch"
+                 MinWidth="300"
+                 Padding="8,4,8,4"
+                 HorizontalAlignment="Stretch"
+                 VerticalAlignment="Stretch"
+                 VerticalContentAlignment="Center"
+                 BorderBrush="{StaticResource AilianBtMainColor}"
+                 BorderThickness="0"
+                 PlaceholderText="请输入关键字"
+                 Text="{x:Bind SearchKey, Mode=OneWay}" />
+        <Button x:Name="btnSearch"
+                Grid.Column="1"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Stretch"
+                Background="Transparent"
+                BorderThickness="0"
+                Style="{StaticResource SearchButton}" />
     </Grid>
 </UserControl>
