--- a/AilianBT/Views/DownloadMainView.xaml
+++ b/AilianBT/Views/DownloadMainView.xaml
@@ -1,81 +1,89 @@
-﻿<Page
-    x:Class="BtDownload.Views.DownloadMainView"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:BtDownload.Views"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
+﻿<Page x:Class="AilianBT.Views.DownloadMainView"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:local="using:AilianBT.Views"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      mc:Ignorable="d">
     <Page.Resources>
-        <local:IndexConverter x:Key="IndexConverter"></local:IndexConverter>
-        
+        <local:IndexConverter x:Key="IndexConverter" />
     </Page.Resources>
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <Grid.RowDefinitions>
-            <RowDefinition Height="auto"/>
-            <RowDefinition/>
+            <RowDefinition Height="auto" />
+            <RowDefinition />
         </Grid.RowDefinitions>
         <Grid.Resources>
             <Style TargetType="ListViewItem">
-                <Setter Property="Foreground" Value="{StaticResource AilianBtTitleUnselectForeground}"></Setter>
-                <Setter Property="VerticalAlignment" Value="Center"></Setter>
+                <Setter Property="Foreground" Value="{StaticResource AilianBtTitleUnselectForeground}" />
+                <Setter Property="VerticalAlignment" Value="Center" />
                 <Setter Property="Template">
                     <Setter.Value>
                         <ControlTemplate>
-                            <StackPanel x:Name="RootPanel" VerticalAlignment="Stretch" Background="Transparent">
+                            <StackPanel x:Name="RootPanel"
+                                        VerticalAlignment="Stretch"
+                                        Background="Transparent">
+                                <ContentPresenter x:Name="ContentPresenter"
+                                                  HorizontalAlignment="Stretch"
+                                                  VerticalAlignment="Stretch"
+                                                  HorizontalContentAlignment="Center" />
+                                <Border x:Name="BorderBar"
+                                        Margin="8"
+                                        BorderBrush="{StaticResource AilianBtMainColor}"
+                                        BorderThickness="0,0,0,2"
+                                        Visibility="Collapsed" />
                                 <VisualStateManager.VisualStateGroups>
                                     <VisualStateGroup>
-                                        <VisualState x:Name="Normal"></VisualState>
+                                        <VisualState x:Name="Normal" />
                                         <VisualState x:Name="Selected">
                                             <Storyboard>
-                                                <ObjectAnimationUsingKeyFrames  Storyboard.TargetName="ContentPresenter" Storyboard.TargetProperty="Foreground">
-                                                    <DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource AilianBtMainColor}"></DiscreteObjectKeyFrame>
+                                                <ObjectAnimationUsingKeyFrames Storyboard.TargetName="ContentPresenter" Storyboard.TargetProperty="Foreground">
+                                                    <DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource AilianBtMainColor}" />
                                                 </ObjectAnimationUsingKeyFrames>
-                                                <ObjectAnimationUsingKeyFrames  Storyboard.TargetName="BorderBar" Storyboard.TargetProperty="Visibility">
-                                                    <DiscreteObjectKeyFrame KeyTime="0" Value="Visible"></DiscreteObjectKeyFrame>
+                                                <ObjectAnimationUsingKeyFrames Storyboard.TargetName="BorderBar" Storyboard.TargetProperty="Visibility">
+                                                    <DiscreteObjectKeyFrame KeyTime="0" Value="Visible" />
                                                 </ObjectAnimationUsingKeyFrames>
                                             </Storyboard>
                                         </VisualState>
                                         <VisualState x:Name="PointerOver">
                                             <Storyboard>
-                                                <ObjectAnimationUsingKeyFrames  Storyboard.TargetName="ContentPresenter" Storyboard.TargetProperty="Foreground">
-                                                    <DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource AilianBtMainColor}"></DiscreteObjectKeyFrame>
+                                                <ObjectAnimationUsingKeyFrames Storyboard.TargetName="ContentPresenter" Storyboard.TargetProperty="Foreground">
+                                                    <DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource AilianBtMainColor}" />
                                                 </ObjectAnimationUsingKeyFrames>
-                                                <ObjectAnimationUsingKeyFrames  Storyboard.TargetName="BorderBar" Storyboard.TargetProperty="Visibility">
-                                                    <DiscreteObjectKeyFrame KeyTime="0" Value="Visible"></DiscreteObjectKeyFrame>
+                                                <ObjectAnimationUsingKeyFrames Storyboard.TargetName="BorderBar" Storyboard.TargetProperty="Visibility">
+                                                    <DiscreteObjectKeyFrame KeyTime="0" Value="Visible" />
                                                 </ObjectAnimationUsingKeyFrames>
                                             </Storyboard>
                                         </VisualState>
                                     </VisualStateGroup>
                                 </VisualStateManager.VisualStateGroups>
-                                <ContentPresenter x:Name="ContentPresenter" HorizontalAlignment="Stretch" HorizontalContentAlignment="Center" VerticalAlignment="Stretch"></ContentPresenter>
-                                <Border x:Name="BorderBar" Margin="8" Visibility="Collapsed" BorderBrush="{StaticResource AilianBtMainColor}" BorderThickness="0,0,0,2"></Border>
                             </StackPanel>
                         </ControlTemplate>
                     </Setter.Value>
                 </Setter>
             </Style>
         </Grid.Resources>
-        <ListView  x:Name="navibar" Background="{StaticResource AilianBtGridBackground2}"
-                        SelectedIndex="{x:Bind pivot.SelectedIndex,Mode=TwoWay}"
-                   >
-            <TextBlock FontSize="20" >正在下载</TextBlock>
-            <TextBlock FontSize="20"  >下载完成</TextBlock>
+        <ListView x:Name="navibar"
+                  Background="{StaticResource AilianBtGridBackground2}"
+                  SelectedIndex="{x:Bind pivot.SelectedIndex, Mode=TwoWay}">
+            <TextBlock FontSize="20">正在下载</TextBlock>
+            <TextBlock FontSize="20">下载完成</TextBlock>
             <ListView.ItemsPanel>
                 <ItemsPanelTemplate>
-                    <StackPanel Orientation="Horizontal"></StackPanel>
+                    <StackPanel Orientation="Horizontal" />
                 </ItemsPanelTemplate>
             </ListView.ItemsPanel>
         </ListView>
-        <Pivot x:Name="pivot" Grid.Row="1" 
+        <Pivot x:Name="pivot"
+               Grid.Row="1"
                Background="{StaticResource AilianBtGridBackground2}">
             <PivotItem Margin="0">
-                <local:DownloadingView Margin="0" x:Name="DownloadingView"></local:DownloadingView>
+                <local:DownloadingView x:Name="DownloadingView" Margin="0" />
             </PivotItem>
             <PivotItem Margin="0">
-                <local:DownloadedView Margin="0" x:Name="DownloadedView"></local:DownloadedView>
+                <local:DownloadedView x:Name="DownloadedView" Margin="0" />
             </PivotItem>
-           
+
         </Pivot>
     </Grid>
 </Page>
