--- a/AilianBT/Views/SearchView.xaml
+++ b/AilianBT/Views/SearchView.xaml
@@ -1,65 +1,66 @@
-﻿<Page
-    x:Class="AilianBT.Views.SearchView"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:AilianBT.Views"
-    xmlns:controls="using:AilianBT.Views.Controls"
-    xmlns:models="using:AilianBT.Models"
-    xmlns:converters="using:AilianBT.ValueConverters"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
+﻿<Page x:Class="AilianBT.Views.SearchView"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:controls="using:AilianBT.Views.Controls"
+      xmlns:converters="using:AilianBT.Converters"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:local="using:AilianBT.Views"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      xmlns:models="using:AilianBT.Models"
+      mc:Ignorable="d">
 
     <Page.Resources>
-        <Style  TargetType="ListViewItem">
-            <Setter Property="HorizontalContentAlignment" Value="Stretch"></Setter>
+        <Style TargetType="ListViewItem">
+            <Setter Property="HorizontalContentAlignment" Value="Stretch" />
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate>
                         <Grid x:Name="RootGrid" Background="Transparent">
+                            <Rectangle x:Name="ContentRectangle"
+                                       HorizontalAlignment="Stretch"
+                                       VerticalAlignment="Stretch"
+                                       Fill="Transparent" />
+                            <ContentPresenter x:Name="ContentPresenter" Padding="12,0,12,0" />
                             <VisualStateManager.VisualStateGroups>
                                 <VisualStateGroup x:Name="CommonStates">
-                                    <VisualState x:Name="Normal">
-                                    </VisualState>
+                                    <VisualState x:Name="Normal" />
                                     <VisualState x:Name="PointerOver">
                                         <Storyboard>
 
-                                            <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Fill" Storyboard.TargetName="ContentRectangle">
-                                                <DiscreteObjectKeyFrame KeyTime="0" Value="{ThemeResource AilianBtGridBackground}"/>
+                                            <ObjectAnimationUsingKeyFrames Storyboard.TargetName="ContentRectangle" Storyboard.TargetProperty="Fill">
+                                                <DiscreteObjectKeyFrame KeyTime="0" Value="{ThemeResource AilianBtGridBackground}" />
                                             </ObjectAnimationUsingKeyFrames>
                                             <DoubleAnimation Storyboard.TargetName="ContentRectangle"
-                                                         Storyboard.TargetProperty="Opacity"
-                                                         Duration="0"
-                                                         To="0.6"/>
+                                                             Storyboard.TargetProperty="Opacity"
+                                                             To="0.6"
+                                                             Duration="0" />
                                         </Storyboard>
                                     </VisualState>
                                     <VisualState x:Name="Pressed">
                                         <Storyboard>
-                                            <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Fill" Storyboard.TargetName="ContentRectangle">
-                                                <DiscreteObjectKeyFrame KeyTime="0" Value="{ThemeResource AilianBtGridBackground}"/>
+                                            <ObjectAnimationUsingKeyFrames Storyboard.TargetName="ContentRectangle" Storyboard.TargetProperty="Fill">
+                                                <DiscreteObjectKeyFrame KeyTime="0" Value="{ThemeResource AilianBtGridBackground}" />
                                             </ObjectAnimationUsingKeyFrames>
                                             <DoubleAnimation Storyboard.TargetName="ContentRectangle"
-                                                         Storyboard.TargetProperty="Opacity"
-                                                         Duration="0"
-                                                         To="0.6"/>
+                                                             Storyboard.TargetProperty="Opacity"
+                                                             To="0.6"
+                                                             Duration="0" />
                                         </Storyboard>
                                     </VisualState>
                                     <VisualState x:Name="Selected">
                                         <Storyboard>
-                                            <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Fill" Storyboard.TargetName="ContentRectangle">
-                                                <DiscreteObjectKeyFrame KeyTime="0" Value="{ThemeResource AilianBtGridBackground}"/>
+                                            <ObjectAnimationUsingKeyFrames Storyboard.TargetName="ContentRectangle" Storyboard.TargetProperty="Fill">
+                                                <DiscreteObjectKeyFrame KeyTime="0" Value="{ThemeResource AilianBtGridBackground}" />
                                             </ObjectAnimationUsingKeyFrames>
                                             <DoubleAnimation Storyboard.TargetName="ContentRectangle"
-                                                         Storyboard.TargetProperty="Opacity"
-                                                         Duration="0"
-                                                         To="0.6"/>
+                                                             Storyboard.TargetProperty="Opacity"
+                                                             To="0.6"
+                                                             Duration="0" />
 
                                         </Storyboard>
                                     </VisualState>
                                 </VisualStateGroup>
                             </VisualStateManager.VisualStateGroups>
-                            <Rectangle x:Name="ContentRectangle" Fill="Transparent" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"></Rectangle>
-                            <ContentPresenter x:Name="ContentPresenter" Padding="12,0,12,0"></ContentPresenter>
                         </Grid>
                     </ControlTemplate>
                 </Setter.Value>
@@ -69,35 +70,53 @@
     <Grid Background="{StaticResource AilianBtGridBackground2}">
         <Grid.RowDefinitions>
             <RowDefinition />
-            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto" />
         </Grid.RowDefinitions>
-        <Image x:Name="imgbackground" Stretch="None" HorizontalAlignment="Right" VerticalAlignment="Bottom"></Image>
-        <ListView Grid.Row="0" x:Name="listView" ItemsSource="{x:Bind SearchVM.AilianRes,Mode=OneWay}" IsItemClickEnabled="True"
-                ItemClick="{x:Bind SearchVM.ItemClick}" 
-                Background="Transparent">
+        <Image x:Name="imgbackground"
+               HorizontalAlignment="Right"
+               VerticalAlignment="Bottom"
+               Stretch="None" />
+        <ListView x:Name="listView"
+                  Grid.Row="0"
+                  Background="Transparent"
+                  IsItemClickEnabled="True"
+                  ItemClick="{x:Bind SearchVM.ItemClick}"
+                  ItemsSource="{x:Bind SearchVM.AilianRes, Mode=OneWay}">
             <ListView.ItemTemplate>
                 <DataTemplate x:DataType="models:AilianResModel">
-                    <Grid Padding="4" BorderThickness="0,0,0,1" BorderBrush="#FF808197">
+                    <Grid Padding="4"
+                          BorderBrush="#FF808197"
+                          BorderThickness="0,0,0,1">
                         <Grid.RowDefinitions>
-                            <RowDefinition/>
-                            <RowDefinition/>
+                            <RowDefinition />
+                            <RowDefinition />
                         </Grid.RowDefinitions>
-                        <TextBlock Margin="0,4" TextWrapping="Wrap" Foreground="{StaticResource AilianBtListMainForeground}">
-                        <Run Text="{x:Bind Title,Mode=OneWay}"></Run>
+                        <TextBlock Margin="0,4"
+                                   Foreground="{StaticResource AilianBtListMainForeground}"
+                                   TextWrapping="Wrap">
+                            <Run Text="{x:Bind Title, Mode=OneWay}" />
                         </TextBlock>
-                        <StackPanel Margin="0,4" Grid.Row="1" Orientation="Horizontal">
-                            <TextBlock Foreground="{StaticResource AilianBtListOtherForeground}" FontSize="12"  Margin="4,0,4,0" >
-                            <Run FontFamily="Segoe MDL2 Assets" Text="&#xE787;"></Run>
-                            <Run Text="{x:Bind PostTime,Mode=OneWay}"/>
+                        <StackPanel Grid.Row="1"
+                                    Margin="0,4"
+                                    Orientation="Horizontal">
+                            <TextBlock Margin="4,0,4,0"
+                                       FontSize="12"
+                                       Foreground="{StaticResource AilianBtListOtherForeground}">
+                                <Run FontFamily="Segoe MDL2 Assets" Text="&#xE787;" />
+                                <Run Text="{x:Bind PostTime, Mode=OneWay}" />
                             </TextBlock>
-                            <TextBlock Foreground="{StaticResource AilianBtListOtherForeground}" FontSize="12" Margin="4,0,4,0" >
-                            <Run FontFamily="Segoe MDL2 Assets" Text="&#xE8B7;"></Run>
-                            <Run Text="{x:Bind Size,Mode=OneWay}"></Run>
+                            <TextBlock Margin="4,0,4,0"
+                                       FontSize="12"
+                                       Foreground="{StaticResource AilianBtListOtherForeground}">
+                                <Run FontFamily="Segoe MDL2 Assets" Text="&#xE8B7;" />
+                                <Run Text="{x:Bind Size, Mode=OneWay}" />
 
                             </TextBlock>
-                            <TextBlock Foreground="{StaticResource AilianBtListOtherForeground}" FontSize="12"  Margin="4,0,4,0" >
-                            <Run FontFamily="Segoe MDL2 Assets" Text="&#xE77B;"></Run>
-                            <Run Text="{x:Bind Author,Mode=OneWay}"></Run>
+                            <TextBlock Margin="4,0,4,0"
+                                       FontSize="12"
+                                       Foreground="{StaticResource AilianBtListOtherForeground}">
+                                <Run FontFamily="Segoe MDL2 Assets" Text="&#xE77B;" />
+                                <Run Text="{x:Bind Author, Mode=OneWay}" />
 
                             </TextBlock>
                         </StackPanel>
@@ -106,12 +125,29 @@
             </ListView.ItemTemplate>
             <ListView.Footer>
                 <Grid Width="36" Height="36">
-                    <TextBlock x:Name="iconLoadingMore" Visibility="Collapsed" Foreground="{StaticResource AilianBtMainColor}" FontSize="36" HorizontalAlignment="Center" VerticalAlignment="Center" Text="&#xf110;" FontFamily="{StaticResource FontAwesome}"></TextBlock>
-                    <Button x:Name="iconNeedMore" Visibility="Collapsed" Foreground="{StaticResource AilianBtMainColor}" Background="Transparent"  BorderThickness="0" Height="40" HorizontalAlignment="Stretch" VerticalAlignment="Bottom" Click="Button_Click"
-                        Content="&#xf103;" FontSize="36" FontFamily="{StaticResource FontAwesome}" >
+                    <TextBlock x:Name="iconLoadingMore"
+                               HorizontalAlignment="Center"
+                               VerticalAlignment="Center"
+                               FontFamily="{StaticResource FontAwesome}"
+                               FontSize="36"
+                               Foreground="{StaticResource AilianBtMainColor}"
+                               Text="&#xf110;"
+                               Visibility="Collapsed" />
+                    <Button x:Name="iconNeedMore"
+                            Height="40"
+                            HorizontalAlignment="Stretch"
+                            VerticalAlignment="Bottom"
+                            Background="Transparent"
+                            BorderThickness="0"
+                            Click="Button_Click"
+                            Content="&#xf103;"
+                            FontFamily="{StaticResource FontAwesome}"
+                            FontSize="36"
+                            Foreground="{StaticResource AilianBtMainColor}"
+                            Visibility="Collapsed">
                         <Button.Template>
                             <ControlTemplate>
-                                <ContentPresenter HorizontalContentAlignment="Center" VerticalContentAlignment="Center"></ContentPresenter>
+                                <ContentPresenter HorizontalContentAlignment="Center" VerticalContentAlignment="Center" />
                             </ControlTemplate>
                         </Button.Template>
                     </Button>
@@ -119,7 +155,10 @@
                 </Grid>
             </ListView.Footer>
         </ListView>
-        <controls:SearchBox x:Name="searchBox"  Grid.Row="1" Margin="8,4,8,8"  SearchKey="{x:Bind SearchVM.SearchKey,Mode=TwoWay}" Search="{x:Bind SearchVM.Search}">
-        </controls:SearchBox>
+        <controls:SearchBox x:Name="searchBox"
+                            Grid.Row="1"
+                            Margin="8,4,8,8"
+                            Search="{x:Bind SearchVM.Search}"
+                            SearchKey="{x:Bind SearchVM.SearchKey, Mode=TwoWay}" />
     </Grid>
 </Page>
