--- a/AilianBT/Views/ShowView.xaml
+++ b/AilianBT/Views/ShowView.xaml
@@ -1,110 +1,121 @@
-﻿<Page
-    x:Class="AilianBT.Views.ShowView"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:AilianBT.Views"
-    
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d" >
+﻿<Page x:Class="AilianBT.Views.ShowView"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:local="using:AilianBT.Views"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      mc:Ignorable="d">
     <Page.Resources>
         <Style TargetType="Button">
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate>
                         <Grid x:Name="RootGrid">
+                            <ContentPresenter x:Name="ContentPresenter"
+                                              HorizontalContentAlignment="Center"
+                                              VerticalContentAlignment="Center" />
                             <VisualStateManager.VisualStateGroups>
                                 <VisualStateGroup>
-                                    <VisualState x:Name="Normal"></VisualState>
+                                    <VisualState x:Name="Normal" />
                                     <VisualState x:Name="PointerOver">
                                         <Storyboard>
-                                            <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Foreground" Storyboard.TargetName="ContentPresenter">
-                                                <DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource AilianBtMainColor}"/>
+                                            <ObjectAnimationUsingKeyFrames Storyboard.TargetName="ContentPresenter" Storyboard.TargetProperty="Foreground">
+                                                <DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource AilianBtMainColor}" />
                                             </ObjectAnimationUsingKeyFrames>
                                         </Storyboard>
                                     </VisualState>
                                     <VisualState x:Name="Pressed">
                                         <Storyboard>
-                                            <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Foreground" Storyboard.TargetName="ContentPresenter">
-                                                <DiscreteObjectKeyFrame KeyTime="0" Value="White"/>
+                                            <ObjectAnimationUsingKeyFrames Storyboard.TargetName="ContentPresenter" Storyboard.TargetProperty="Foreground">
+                                                <DiscreteObjectKeyFrame KeyTime="0" Value="White" />
                                             </ObjectAnimationUsingKeyFrames>
-                                            <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Background" Storyboard.TargetName="RootGrid">
-                                                <DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource AilianBtMainColor}"/>
+                                            <ObjectAnimationUsingKeyFrames Storyboard.TargetName="RootGrid" Storyboard.TargetProperty="Background">
+                                                <DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource AilianBtMainColor}" />
                                             </ObjectAnimationUsingKeyFrames>
                                         </Storyboard>
                                     </VisualState>
                                 </VisualStateGroup>
                             </VisualStateManager.VisualStateGroups>
-                            <ContentPresenter x:Name="ContentPresenter" VerticalContentAlignment="Center"  HorizontalContentAlignment="Center"></ContentPresenter>
                         </Grid>
                     </ControlTemplate>
                 </Setter.Value>
             </Setter>
         </Style>
         <Style TargetType="ListViewItem">
-            <Setter Property="Foreground" Value="{StaticResource AilianBtTitleUnselectForeground}"></Setter>
-            <Setter Property="VerticalAlignment" Value="Center"></Setter>
+            <Setter Property="Foreground" Value="{StaticResource AilianBtTitleUnselectForeground}" />
+            <Setter Property="VerticalAlignment" Value="Center" />
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate>
-                        <StackPanel x:Name="RootPanel" VerticalAlignment="Stretch" Background="Transparent">
+                        <StackPanel x:Name="RootPanel"
+                                    VerticalAlignment="Stretch"
+                                    Background="Transparent">
+                            <ContentPresenter x:Name="ContentPresenter"
+                                              HorizontalAlignment="Stretch"
+                                              VerticalAlignment="Stretch"
+                                              HorizontalContentAlignment="Center" />
+                            <Border x:Name="BorderBar"
+                                    Margin="8"
+                                    BorderBrush="{StaticResource AilianBtMainColor}"
+                                    BorderThickness="0,0,0,2"
+                                    Visibility="Collapsed" />
                             <VisualStateManager.VisualStateGroups>
                                 <VisualStateGroup>
-                                    <VisualState x:Name="Normal"></VisualState>
+                                    <VisualState x:Name="Normal" />
                                     <VisualState x:Name="Selected">
                                         <Storyboard>
-                                            <ObjectAnimationUsingKeyFrames  Storyboard.TargetName="ContentPresenter" Storyboard.TargetProperty="Foreground">
-                                                <DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource AilianBtMainColor}"></DiscreteObjectKeyFrame>
+                                            <ObjectAnimationUsingKeyFrames Storyboard.TargetName="ContentPresenter" Storyboard.TargetProperty="Foreground">
+                                                <DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource AilianBtMainColor}" />
                                             </ObjectAnimationUsingKeyFrames>
-                                            <ObjectAnimationUsingKeyFrames  Storyboard.TargetName="BorderBar" Storyboard.TargetProperty="Visibility">
-                                                <DiscreteObjectKeyFrame KeyTime="0" Value="Visible"></DiscreteObjectKeyFrame>
+                                            <ObjectAnimationUsingKeyFrames Storyboard.TargetName="BorderBar" Storyboard.TargetProperty="Visibility">
+                                                <DiscreteObjectKeyFrame KeyTime="0" Value="Visible" />
                                             </ObjectAnimationUsingKeyFrames>
                                         </Storyboard>
                                     </VisualState>
                                     <VisualState x:Name="PointerOver">
                                         <Storyboard>
-                                            <ObjectAnimationUsingKeyFrames  Storyboard.TargetName="ContentPresenter" Storyboard.TargetProperty="Foreground">
-                                                <DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource AilianBtMainColor}"></DiscreteObjectKeyFrame>
+                                            <ObjectAnimationUsingKeyFrames Storyboard.TargetName="ContentPresenter" Storyboard.TargetProperty="Foreground">
+                                                <DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource AilianBtMainColor}" />
                                             </ObjectAnimationUsingKeyFrames>
-                                            <ObjectAnimationUsingKeyFrames  Storyboard.TargetName="BorderBar" Storyboard.TargetProperty="Visibility">
-                                                <DiscreteObjectKeyFrame KeyTime="0" Value="Visible"></DiscreteObjectKeyFrame>
+                                            <ObjectAnimationUsingKeyFrames Storyboard.TargetName="BorderBar" Storyboard.TargetProperty="Visibility">
+                                                <DiscreteObjectKeyFrame KeyTime="0" Value="Visible" />
                                             </ObjectAnimationUsingKeyFrames>
                                         </Storyboard>
                                     </VisualState>
                                 </VisualStateGroup>
                             </VisualStateManager.VisualStateGroups>
-                            <ContentPresenter x:Name="ContentPresenter" HorizontalAlignment="Stretch" HorizontalContentAlignment="Center" VerticalAlignment="Stretch"></ContentPresenter>
-                            <Border x:Name="BorderBar" Margin="8" Visibility="Collapsed" BorderBrush="{StaticResource AilianBtMainColor}" BorderThickness="0,0,0,2"></Border>
                         </StackPanel>
                     </ControlTemplate>
                 </Setter.Value>
             </Setter>
         </Style>
     </Page.Resources>
-    <Grid  Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <ScrollViewer x:Name="scrollView"  >
+    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+        <ScrollViewer x:Name="scrollView">
             <Grid x:Name="root">
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="auto"/>
-                    <RowDefinition></RowDefinition>
+                    <RowDefinition Height="auto" />
+                    <RowDefinition />
                 </Grid.RowDefinitions>
                 <Grid Grid.Row="1">
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="auto"/>
-                        <RowDefinition/>
+                        <RowDefinition Height="auto" />
+                        <RowDefinition />
                     </Grid.RowDefinitions>
-                    <Pivot  x:Name="pivot" Background="AliceBlue" Grid.Row="1" >
+                    <Pivot x:Name="pivot"
+                           Grid.Row="1"
+                           Background="AliceBlue">
 
-                        <PivotItem >
-                            <WebView x:Name="webViewSummary" DefaultBackgroundColor="AliceBlue"
-                                 ScrollViewer.VerticalScrollMode="Disabled"
-                                 HorizontalAlignment="Stretch" 
-                                  ManipulationMode="None"
-                                 local:ShowView.DetailInfo="{x:Bind ShowVM.ShowModel.Summary,Mode=OneWay}"></WebView>
+                        <PivotItem>
+                            <WebView x:Name="webViewSummary"
+                                     HorizontalAlignment="Stretch"
+                                     local:ShowView.DetailInfo="{x:Bind ShowVM.ShowModel.Summary, Mode=OneWay}"
+                                     DefaultBackgroundColor="AliceBlue"
+                                     ManipulationMode="None"
+                                     ScrollViewer.VerticalScrollMode="Disabled" />
                         </PivotItem>
-                        <PivotItem  >
-                            <WebView DefaultBackgroundColor="AliceBlue" 
-                                 local:ShowView.DetailInfo="{x:Bind ShowVM.ShowModel.FileInfo,Mode=OneWay}"></WebView>
+                        <PivotItem>
+                            <WebView local:ShowView.DetailInfo="{x:Bind ShowVM.ShowModel.FileInfo, Mode=OneWay}" DefaultBackgroundColor="AliceBlue" />
                         </PivotItem>
                     </Pivot>
                 </Grid>
@@ -112,60 +123,82 @@
                     <Grid.RowDefinitions>
                         <RowDefinition />
                         <RowDefinition />
-                        <RowDefinition Height="auto"></RowDefinition>
+                        <RowDefinition Height="auto" />
                     </Grid.RowDefinitions>
 
-                    <TextBlock Margin="4" Foreground="{StaticResource AilianBtListMainForeground}"  FontSize="22" TextWrapping="Wrap" Text="{x:Bind ShowVM.ShowModel.Title,Mode=OneWay}"></TextBlock>
-                    <Grid Grid.Row="1" Margin="4" >
+                    <TextBlock Margin="4"
+                               FontSize="22"
+                               Foreground="{StaticResource AilianBtListMainForeground}"
+                               Text="{x:Bind ShowVM.ShowModel.Title, Mode=OneWay}"
+                               TextWrapping="Wrap" />
+                    <Grid Grid.Row="1" Margin="4">
                         <Grid.ColumnDefinitions>
-                            <ColumnDefinition/>
-                            <ColumnDefinition/>
+                            <ColumnDefinition />
+                            <ColumnDefinition />
                         </Grid.ColumnDefinitions>
-                        <TextBlock Margin="8,4,8,4" Foreground="{StaticResource AilianBtListOtherForeground}" FontSize="12" Grid.Column="0" >
-                        
-                        <Run Text="{x:Bind ShowVM.ShowModel.PublishTime,Mode=OneWay}"/>
+                        <TextBlock Grid.Column="0"
+                                   Margin="8,4,8,4"
+                                   FontSize="12"
+                                   Foreground="{StaticResource AilianBtListOtherForeground}">
+
+                            <Run Text="{x:Bind ShowVM.ShowModel.PublishTime, Mode=OneWay}" />
                         </TextBlock>
-                        <TextBlock Margin="8,4,8,4" Foreground="{StaticResource AilianBtListOtherForeground}" HorizontalAlignment="Right" FontSize="12" Grid.Column="1" >
-                        <Run>发布代号：</Run>
-                        <Run Text="{x:Bind ShowVM.ShowModel.Uper,Mode=OneWay}"></Run>
+                        <TextBlock Grid.Column="1"
+                                   Margin="8,4,8,4"
+                                   HorizontalAlignment="Right"
+                                   FontSize="12"
+                                   Foreground="{StaticResource AilianBtListOtherForeground}">
+                            <Run>发布代号：</Run>
+                            <Run Text="{x:Bind ShowVM.ShowModel.Uper, Mode=OneWay}" />
                         </TextBlock>
                     </Grid>
-                    <StackPanel Grid.Row="2" x:Name="panelControl" Orientation="Vertical"  >
-                        <StackPanel  Orientation="Horizontal" Padding="4,12">
-                            <Button  Margin="4,0"   Command="{x:Bind ShowVM.DownloadBtCommand}" CommandParameter="{x:Bind ShowVM.ShowModel.BtLink,Mode=OneWay}">
+                    <StackPanel x:Name="panelControl"
+                                Grid.Row="2"
+                                Orientation="Vertical">
+                        <StackPanel Padding="4,12" Orientation="Horizontal">
+                            <Button Margin="4,0"
+                                    Command="{x:Bind ShowVM.DownloadBtCommand}"
+                                    CommandParameter="{x:Bind ShowVM.ShowModel.BtLink, Mode=OneWay}">
                                 <Button.Content>
                                     <StackPanel Orientation="Horizontal">
-                                        <TextBlock FontSize="15"  FontFamily="Segoe MDL2 Assets" Text="&#xE896;"/>
+                                        <TextBlock FontFamily="Segoe MDL2 Assets"
+                                                   FontSize="15"
+                                                   Text="&#xE896;" />
                                         <TextBlock FontSize="12">下载种子</TextBlock>
                                     </StackPanel>
                                 </Button.Content>
                             </Button>
-                            <Button  Margin="4,0"  Command="{x:Bind ShowVM.DownloadMagnetCommand}" CommandParameter="{x:Bind ShowVM.ShowModel.MagnetLink,Mode=OneWay}">
+                            <Button Margin="4,0"
+                                    Command="{x:Bind ShowVM.DownloadMagnetCommand}"
+                                    CommandParameter="{x:Bind ShowVM.ShowModel.MagnetLink, Mode=OneWay}">
                                 <Button.Content>
                                     <StackPanel Orientation="Horizontal">
-                                        <TextBlock FontSize="15"  FontFamily="Segoe MDL2 Assets" Text="&#xE8C8;"/>
+                                        <TextBlock FontFamily="Segoe MDL2 Assets"
+                                                   FontSize="15"
+                                                   Text="&#xE8C8;" />
                                         <TextBlock FontSize="12">复制磁链</TextBlock>
                                     </StackPanel>
                                 </Button.Content>
                             </Button>
                         </StackPanel>
-                        <ListView  x:Name="navibar" Background="{StaticResource AilianBtGridBackground2}"
-                           SelectedIndex="{Binding ElementName=pivot,Path=SelectedIndex,Mode=TwoWay}"  >
+                        <ListView x:Name="navibar"
+                                  Background="{StaticResource AilianBtGridBackground2}"
+                                  SelectedIndex="{Binding ElementName=pivot, Path=SelectedIndex, Mode=TwoWay}">
                             <TextBlock FontSize="20">简介</TextBlock>
                             <TextBlock FontSize="20">文件</TextBlock>
                             <ListView.ItemsPanel>
                                 <ItemsPanelTemplate>
-                                    <StackPanel Orientation="Horizontal"></StackPanel>
+                                    <StackPanel Orientation="Horizontal" />
                                 </ItemsPanelTemplate>
                             </ListView.ItemsPanel>
                         </ListView>
                     </StackPanel>
-                    
+
                 </Grid>
 
-               
+
             </Grid>
         </ScrollViewer>
-        
+
     </Grid>
 </Page>
