Remove unused namespace and add style for setting view

--- a/AilianBT/App.xaml
+++ b/AilianBT/App.xaml
@@ -7,6 +7,7 @@
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="ms-appx:///Styles/Buttons.xaml" />
+                <ResourceDictionary Source="ms-appx:///Styles/ItemsControls.xaml" />
             </ResourceDictionary.MergedDictionaries>
 
             <vm:ViewModelLocator x:Key="Locator" />
