--- a/AilianBT/Views/Controls/Notification.xaml
+++ b/AilianBT/Views/Controls/Notification.xaml
@@ -1,14 +1,13 @@
-﻿<UserControl
-    x:Class="AilianBT.Views.Controls.Notification"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="using:AilianBT.Views.Controls"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    x:Name="userControl"
-    d:DesignHeight="100"
-    d:DesignWidth="200"
-    mc:Ignorable="d">
+﻿<UserControl x:Class="AilianBT.Views.Controls.Notification"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:local="using:AilianBT.Views.Controls"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             x:Name="userControl"
+             d:DesignHeight="100"
+             d:DesignWidth="200"
+             mc:Ignorable="d">
     <UserControl.Resources>
         <Storyboard x:Name="Storyboard">
             <ObjectAnimationUsingKeyFrames Storyboard.TargetName="userControl" Storyboard.TargetProperty="(UIElement.Visibility)">
@@ -43,19 +42,17 @@
     </UserControl.Resources>
 
     <Grid HorizontalAlignment="Center" VerticalAlignment="Center">
-        <Rectangle
-            Width="200"
-            Height="100"
-            Fill="{StaticResource AilianBtMainColor}"
-            Opacity="0.5" />
-        <TextBlock
-            x:Name="tbMsg"
-            MaxWidth="200"
-            HorizontalAlignment="Center"
-            VerticalAlignment="Center"
-            Foreground="GhostWhite"
-            Text="{x:Bind NotifyMessage, Mode=OneWay}"
-            TextWrapping="Wrap" />
+        <Rectangle Width="200"
+                   Height="100"
+                   Fill="{StaticResource AilianBtMainColor}"
+                   Opacity="0.5" />
+        <TextBlock x:Name="tbMsg"
+                   MaxWidth="200"
+                   HorizontalAlignment="Center"
+                   VerticalAlignment="Center"
+                   Foreground="GhostWhite"
+                   Text="{x:Bind NotifyMessage, Mode=OneWay}"
+                   TextWrapping="Wrap" />
 
     </Grid>
 </UserControl>
